--- a/SimpleWindow/CMakeLists.txt
+++ b/SimpleWindow/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required (VERSION 2.6)
 
 project (SimpleWindow)
 
-add_executable(Helloworld main.c)
+link_libraries(SDL2)
+
+add_executable(SimpleWindow SimpleWindow.c)
